# ChangeLog for sys-cluster/csync2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/csync2/ChangeLog,v 1.41 2015/08/03 14:03:34 ultrabug Exp $

  03 Aug 2015; Ultrabug <ultrabug@gentoo.org> csync2-2.0.ebuild:
  fix #556582, mysql build support

  03 Aug 2015; Ultrabug <ultrabug@gentoo.org> csync2-2.0.ebuild:
  fix missing REQUIRED_USE #556564

*csync2-2.0 (12 May 2015)

  12 May 2015; Ultrabug <ultrabug@gentoo.org> csync2-1.34-r2.ebuild,
  +csync2-2.0.ebuild:
  EAPI bump, version bump fix #548672

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> csync2-1.34-r2.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  14 May 2013; Ultrabug <ultrabug@gentoo.org> metadata.xml:
  fix metadata wrt #469570

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> csync2-1.34-r2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  08 Nov 2010; Kacper Kowalik <xarthisius@gentoo.org> -csync2-1.34.ebuild,
  -csync2-1.34-r1.ebuild:
  Drop old.

  08 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  csync2-1.34-r2.ebuild:
  x86 stable wrt bug #344257

  06 Nov 2010; Markos Chandras <hwoarang@gentoo.org> csync2-1.34-r2.ebuild:
  Stable on amd64 wrt bug #344257

*csync2-1.34-r2 (22 Jun 2010)

  22 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org>
  +csync2-1.34-r2.ebuild:
  Proxy commit: making ssl optional, general cleaning.

  21 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Adding Ultrabug as maintainer.

  19 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org> +files/csync2.initd,
  csync2-1.34-r1.ebuild:
  Adding init script. Thanks to Ultrabug <ultrabug@ultrabug.net>

*csync2-1.34-r1 (17 Jun 2010)

  17 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org>
  +csync2-1.34-r1.ebuild, +files/csync2-1.34-gnutls.patch:
  Updating ebuild and gnutls patch. Fixes bug 293835, 293866, 298333. Thanks