@@ -7,13 +7,13 @@ AUX csync2.xinetd 388 SHA256 c281d7e494088abd84ef09b5487482cfa886f12aa0ab717f4cb
 DIST csync2-1.34.tar.gz 222765 SHA256 32b250dd4a0353f71015c5c3961174b975dd5e799e4a084e8f6d00792bd8c833 SHA512 a24154446740f3362c10a23d526c29e96292f2ad56a9ed2f11ca0a6d7afed3730d0e96f8ebc2c6cdcc17031aa0e368f6ba93084ad3cf5f4828fbc279e6f004d8 WHIRLPOOL 795be9f3a5451a065993911ff84215cf144ba5d5fd9c81060491f6c247937c96f1a7a362b2547ffa6753201d5afd31fb56afb3edf363210f6c53bcdb55f16233
 DIST csync2-2.0.tar.gz 411013 SHA256 11cb37380fb185bce0c22b804fec9b01c385d9d83cc528cfd48d748453834fa2 SHA512 f91fd222f67affe9634471d341b43ff67854a6ed25b620301a454e98a79a9fb80b2a66eb8713546758fd08300d52751e5ca7472c696daa20ee11779b87a830f8 WHIRLPOOL 6cbe49b5dd36d455d2c2b15089cc8e766aa3f9ebc2d5ebbd0528379123ae280850972b07279075a38dc328391633bd63f1a5dc8a2403b1d4faac295e27d1d920
 EBUILD csync2-1.34-r2.ebuild 2724 SHA256 03bbc1495e2472decffff74b3969f3d3b5c0f22c176b250a26635433cd513ab1 SHA512 ff6bd4e589673d722a904123d812ff392fbea821bfaadae8fe39d11565ffda95de9847e717302485b3b31a27249790ba51fe84cfa6b2ef608c7a55d703a68a7c WHIRLPOOL b6d1f93189415293d60775495f0b6468a88096921b5e4992a51a12d70e73f264ceb28879df081c63ff08c52cdf9767df422884d6d79ff58438c6345a2f63df3f
-EBUILD csync2-2.0.ebuild 2715 SHA256 6e4bcb792b95876404d8ca26fa1846be63c32c8f46a675fed0b6906252b0e9a8 SHA512 a2debe6946e9c5e92d649b848db43d781c40110bd34f829372ceda9de279fab4c44e1146c26e50909d8910d0b1deb67704f45da164565340ec7bec8a88562b05 WHIRLPOOL a3882bca4ff6e95560074f6512c9da091ac3e62843f0f4f38da8ab32e019532c6418dc1b4068dda4ad450d8ece72ffde7e1417dc3f932a3c51ecd82db244d292
-MISC ChangeLog 5934 SHA256 fc872c7658b6b37904b7bf7316f84f1632bda98f4010041058b92f51de13fa61 SHA512 bd362e40631669230230fa756bd592ad9584ef4147a2f0cab05d826ec9099544ece44eedb64bc0a19cc7897773aa3718d65a9ce5b429fa8aa6423e48b46045ea WHIRLPOOL 584922a16cf8fd23d73a9c8e5868b3990e524f8f2b8812ddef1c653bb3ea72e0b44d682ed99857888604f6068305b984d79625d845f3b0ce1287bfdbd01b90e7
+EBUILD csync2-2.0.ebuild 2795 SHA256 7d0ceee2f591642fb2f718eee2c79a8a064a39ca1bfe9a49f17fcc5f65bbb645 SHA512 b1f65e9c0f84b7fdf5f99233a1243c677c43ebb968375f57a1a1610a5c77910f9768f8c550cd02b8e79211d7be36bb0ebb29a345bc0a50edc2b52bf983044d9b WHIRLPOOL adbc78a2a7a9522735ca9c1f2de1b1bf006fa6dc0c5fd3ee7c887a199b2026c72f900d20564a83cdc86e4e6ec1ad935435d256a1c352332c5218f76680d5c463
+MISC ChangeLog 6036 SHA256 03c45115b34a893f4407f21d8e88cc36c102ee4a8b87a8f94b42588eac70f5da SHA512 4c74232df11aac1b2ff5611bdf662a681644cc148de0cdc56854d352460a8fbebbf239c09e4a8b109591d9d724b64bfe15e13839512d2b842f6f3b8ea40d6b2b WHIRLPOOL 49898ba121e89e1315a3e62972a6364e2ca4ea21077494f4a4186e6cf5ea405bcac457069e5f66e62c4c66f0e2fc48854716ec993a4ebda5c91de1e98372909e
 MISC metadata.xml 161 SHA256 fb0c2b5d458c0b9e6cae1b1cf1c80137c4b23c54e657343370b7d293fb29ecce SHA512 f3e07a100754c87015a67a1dd5e71686adbaf25281054a74ec21cb342a2440c010b30eb7d3d813a2504ea2b6d0330ac32511f11b583df1c519d579ad2b6f0c6a WHIRLPOOL c13246d1d1357f83c01bfb11b06c0bfe565c741b971d846363d44579f974fc1cb7b29470627460f6fc4d62eff22056b98cae11bfd497e5a20dfb566abd46c6d3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlW/dLcACgkQKiQSS7ZY+hPdgQD/dutlnYViPckveHCa0b23+qCY
-5wh/XciP/Xg7siih+sMBALNDUAxTUj2Fmv4KEbf/D92fVcm3UxCkZALtJGWZgjpp
-=QLll
+iF4EAREIAAYFAlW/lE8ACgkQKiQSS7ZY+hPOdQD+KjDvzfKDNabnO5hbsL5pWeDe
+Q3FFThios8FgVeSdOsMA/R0vLm2tkMuG+nFEdCRbw7ohZ2ENgvELuapYvthSfNZf
+=5tE7
 -----END PGP SIGNATURE-----
